fix loading z-index and animation

--- a/src/component/common/loading/index.scss
+++ b/src/component/common/loading/index.scss
@@ -4,6 +4,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
+  z-index: 2;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .dash {
