--- a/src/component/song_single/index.scss
+++ b/src/component/song_single/index.scss
@@ -14,6 +14,7 @@
   &:hover{
     transform: translateX(-20px);
     color: rgb(212, 231, 75);
+    z-index: 1;
   }
 }
 .song span {
